trying to fix background image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1415,7 +1415,7 @@
 */
 		background-image: url("../../images/bg2.jpg");
 
-        background-size: cover;
+        background-size: auto;
 		background-position: top center;
 	}
 
